--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <input type="password" placeholder="Enter your password" id="Password">
         <button id="Signupbtn">Sign up</button>
 
-        <!-- <h2 id="text"></h2> -->
+        <h2>Login</h2>
+        <input type="text" placeholder="Enter your email" id="LEmail">
+        <input type="password" placeholder="Enter your password" id="LPassword">
+        <button id="Loginbtn">Login</button>
+        <h2 id="text"></h2>
+
+        <button id="logout">Logout</button>
         <script src="script.js" type="module"></script>
 </body>
 </html>
