--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FireBase</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <h1>Firebase</h1>
         <h2>Sign Up</h2>
         <input type="text" placeholder="Enter your email" id="Email">
-        <input type="password" placeholder="Enter your password" id="Password">
+        <input type="password" placeholder="Enter your password" id="Password"><i id="show" class="fa-regular fa-eye"></i>
         <button id="Signupbtn">Sign up</button>
 
         <h2>Login</h2>
         <input type="text" placeholder="Enter your email" id="LEmail">
-        <input type="password" placeholder="Enter your password" id="LPassword">
+        <input type="password" placeholder="Enter your password" id="LPassword"><i id="hide" class="fa-regular fa-eye"></i>
         <button id="Loginbtn">Login</button>
         <h2 id="text"></h2>
-
         <button id="logout">Logout</button>
+
+        <h2>Google Continue</h2>
         <script src="script.js" type="module"></script>
 </body>
 </html>
