--- a/index.html
+++ b/index.html
@@ -8,20 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <div id="div">
+        <div id="main">
         <h1>Firebase</h1>
         <h2>Sign Up</h2>
         <input type="text" placeholder="Enter your email" id="Email">
         <input type="password" placeholder="Enter your password" id="Password"><i id="show" class="fa-regular fa-eye"></i>
         <button id="Signupbtn">Sign up</button>
-
+        </div>
+        
+        <div id="body">
         <h2>Login</h2>
         <input type="text" placeholder="Enter your email" id="LEmail">
         <input type="password" placeholder="Enter your password" id="LPassword"><i id="hide" class="fa-regular fa-eye"></i>
         <button id="Loginbtn">Login</button>
         <h2 id="text"></h2>
-        <button id="logout">Logout</button>
-
-        <h2>Google Continue</h2>
+    </div>
+    
+    <div id="nav">
+        <h2 style="margin-left: 20px;">Google Continue</h2>
+        <button style="margin-top: 20px; width: 200px; margin-left: 20px;" id="googlebtn">Continue With Google</button>
+    </div>
+    <button style="margin-top: 20px; text-align: center; margin-left: 40%; font-size: 30px; width: 200px; color: red;" id="logout">Logout</button>
+</div>
+<div style="height: 100px;"></div>
         <script src="script.js" type="module"></script>
 </body>
 </html>
